--- a/tests/integration/test.html
+++ b/tests/integration/test.html
@@ -28,6 +28,12 @@
 </head>
 
 <body ng-app="myApp">
+    <div class="test">
+        <input />
+        <input />
+    </div>
+
+
     <div class="container" ng-controller="FilterCtrl as vm">
         <angular-remote-typeaheadjs remote="{{vm.urlRemote}}" datasource="categories" placeholder="filter categories"
             onselected="vm.onSelected"
