--- a/tests/integration/test.html
+++ b/tests/integration/test.html
@@ -28,11 +28,6 @@
 </head>
 
 <body ng-app="myApp">
-    <div class="test">
-        <input />
-        <input />
-    </div>
-
 
     <div class="container" ng-controller="FilterCtrl as vm">
         <angular-remote-typeaheadjs remote="{{vm.urlRemote}}" datasource="categories" placeholder="filter categories"
@@ -42,6 +37,9 @@
             logonwarn="true"
             clearvalue="true"></angular-remote-typeaheadjs>
     </div>
+
+    Selection: <input id="itemonSelected" ng-model="vm.itemonSelected"/>
+
 
 <script>
 
@@ -57,8 +55,7 @@
         vm.prefetch = '/tests/integration/data.json'
         vm.urlRemote = '/tests/integration/%QUERY.json';
         vm.onSelected = function (item) {
-            vm.filtro = vm.filtro || [];
-            vm.filtro.push(item.name);
+            vm.itemonSelected = item;
         };
         vm.onClosed = function() {
         };
