--- a/tests/integration/test.html
+++ b/tests/integration/test.html
@@ -63,7 +63,7 @@
         <angular-remote-typeaheadjs remote="{{vm.urlRemote}}" model="vm.categorie" clearvalue="false"></angular-remote-typeaheadjs>
         <br/>
         <br/>
-        Selection: <input id="inputbound4" ng-model="vm.categorie"/>
+        Model: <input id="inputbound4" ng-model="vm.categorie"/>
     </div>
 
 
