--- a/tests/integration/test.html
+++ b/tests/integration/test.html
@@ -31,7 +31,7 @@
 <body ng-app="myApp">
 
     <div class="container1" ng-controller="FilterCtrl1 as vm">
-        <angular-remote-typeaheadjs remote="{{vm.urlRemote}}"
+        <angular-remote-typeaheadjs remote="{{vm.urlRemote}}" prefetch="{{vm.prefetch}}"
             placeholder="type lit"
             datasource="categories"
             onselected="vm.onSelected"
@@ -61,13 +61,8 @@
     </div>
     <div class="container4" ng-controller="FilterCtrl4 as vm">
         <angular-remote-typeaheadjs remote="{{vm.urlRemote}}" model="vm.categorie" clearvalue="false"></angular-remote-typeaheadjs>
-        <br/>
-        <br/>
-        Model: <input id="inputbound4" ng-model="vm.categorie"/>
+        &nbsp;&nbsp;Model: <input id="inputbound4" ng-model="vm.categorie"/>
     </div>
-
-
-
 <script>
 
 (function() {
@@ -143,7 +138,6 @@
         vm.urlRemote = '/tests/integration/%QUERY.json';
     }
 }());
-
 
 </script>
 </body>
