--- a/index.html
+++ b/index.html
@@ -1,1 +1,118 @@
-demo page will be here soon
+<!doctype html>
+<!--[if lt IE 7]>
+<html ng-app="appdemo" class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>
+<html ng-app="appdemo" class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>
+<html ng-app="appdemo" class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!-->
+<html ng-app="appdemo" class="no-js"> <!--<![endif]-->
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>angular-typeaheadjs Directive demo</title>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <style>
+        /* This helps the ng-show/ng-hide animations start at the right place. */
+        /* Since Angular has this but needs to load, this gives us the class early. */
+        .ng-hide {
+            display: none!important;
+        }
+    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
+    <link rel="stylesheet" href="css/app.css" />
+
+</head>
+<body class="ng-cloak">
+
+<div class="container">
+
+    <h1 class="title">angular-typeaheadjs</h1>
+    <div><h2>Directive</h2><img src="data/AngularJS-Shield-small.png" id="logo-angular"/></div>
+
+
+
+    <h4>This page is an adaptation of <a href="http://twitter.github.io/typeahead.js/examples/">typeaheadjs examples page</a> using AngularJS
+        <br/>
+        to demonstrate the use of that component in an angular application using the <br/>
+        <span class="mydir"><a href="https://github.com/borntorun/angular-typeaheadjs">angular-typeaheadjs</a></span> directive.
+    </h4>
+
+    <aside>
+        <h5>This is a an independent project and not related to the twitter typeahead.js project.</h5>
+        <p>The directive uses always the <a href="https://github.com/twitter/typeahead.js/blob/master/doc/bloodhound.md">Bloodhound</a> (Suggestion Engine).</p>
+    </aside>
+
+    <ol class="table-of-contents">
+        <li><a href="#remoteprefetch">Remote-Prefetch</a></li><span> &middot; </span>
+    </ol>
+
+    <div class="example" id="remoteprefetch">
+        <h2 class="example-name">Remote - Prefetch</h2>
+        <p class="example-description">
+            Prefetched data is fetched and processed on initialization. If the
+            browser supports local storage, the processed data will be cached
+            there to prevent additional network requests on subsequent page loads.
+        </p>
+        <p>
+            Try to type first the letter <b>'u'</b> , you will see 9 items <small>(the limit specified)</small> from prefetch data.<br/>
+            The if you type a <b>'t'</b> you will see the remote in action getting another item
+
+        </p>
+
+        <div class="demo" ng-controller="PrefetchCtrl as vm">
+
+            <!--<input class="typeahead" type="text" placeholder="Countries">-->
+            <div class="scrolling">Item scrolled:&nbsp;{{vm.itemonCursorChanged}}</div>
+            <div class="selection">Selection:&nbsp;<span ng-repeat="item in vm.itemonSelected">{{item}}</span></div>
+
+            <angular-typeaheadjs prefetch="{{vm.prefetch}}"
+                                 remote="{{vm.urlRemote}}"
+                                 onselected="vm.onSelected"
+                                 onclosed="vm.onClosed"
+                                 oncursorchanged="vm.onCursorChanged"
+                                 datasource="countries"
+                                 clearvalue="true"
+                                 placeholder="Search for Countries"
+                                 minlensugestion="1"
+                                 limit="9"
+                                 cssinput="inputclass"/>
+
+
+        </div>
+
+        <div class="gist" ng-non-bindable>
+            <script src="https://gist.github.com/borntorun/7671ef832b7cbacb8255.js"></script>
+        </div>
+    </div>
+
+    <div class="social">
+            <span class="social-btn">
+              <iframe src="github-btn.html?user=borntorun&repo=angular-typeaheadjs&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="92" height="20"></iframe>
+            </span>
+            <span class="social-btn">
+              <iframe src="github-btn.html?user=borntorun&repo=angular-typeaheadjs&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="95" height="20"></iframe>
+            </span>
+            <span class="social-btn">
+              <a href="https://twitter.com/jmmtcarvalho" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false">Follow</a>
+            </span>
+            <span class="social-btn">
+              <a href="https://twitter.com/share" class="twitter-share-button" data-count="true">Tweet</a>
+            </span>
+    </div>
+</div>
+
+
+
+
+
+<script src="bower_components/handlebars/handlebars.js"></script>
+<script src="bower_components/jquery/dist/jquery.min.js"></script>
+<script src="bower_components/typeahead.js/dist/typeahead.bundle.min.js"></script>
+<script src="bower_components/angular/angular.js"></script>
+<script src="bower_components/angular-typeaheadjs/dist/angular-typeaheadjs.min.js"></script>
+<script src="js/app.js"></script>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+<a href="https://github.com/borntorun/angular-typeaheadjs"><img style="position: fixed; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/e7bbb0521b397edbd5fe43e7f760759336b5e05f/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677265656e5f3030373230302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png"></a>
+</body>
+</html>
