correcting js paths

--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
 
 
 
-<script src="bower_components/handlebars/handlebars.js"></script>
+<!--<script src="bower_components/handlebars/handlebars.min.js"></script>-->
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
 <script src="bower_components/typeahead.js/dist/typeahead.bundle.min.js"></script>
-<script src="bower_components/angular/angular.js"></script>
+<script src="bower_components/angular/angular.min.js"></script>
 <script src="bower_components/angular-typeaheadjs/dist/angular-typeaheadjs.min.js"></script>
 <script src="js/app.js"></script>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
