--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
     </style>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="css/app.css" />
-
 </head>
 <body class="ng-cloak">
 
@@ -60,14 +59,14 @@
 
         </p>
 
-        <div class="demo" ng-controller="PrefetchCtrl as vm">
+        <div class="demo" ng-controller="RemotePrefetchCtrl as vm">
 
             <!--<input class="typeahead" type="text" placeholder="Countries">-->
             <div class="scrolling">Item scrolled:&nbsp;{{vm.itemonCursorChanged}}</div>
             <div class="selection">Selection:&nbsp;<span ng-repeat="item in vm.itemonSelected">{{item}}</span></div>
 
             <angular-typeaheadjs prefetch="{{vm.prefetch}}"
-                                 remote="{{vm.urlRemote}}"
+                                 remote="{{vm.remote}}"
                                  onselected="vm.onSelected"
                                  onclosed="vm.onClosed"
                                  oncursorchanged="vm.onCursorChanged"
@@ -109,7 +108,7 @@
 <!--<script src="bower_components/handlebars/handlebars.min.js"></script>-->
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
 <script src="bower_components/typeahead.js/dist/typeahead.bundle.min.js"></script>
-<script src="bower_components/angular/angular.min.js"></script>
+<script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/angular-typeaheadjs/dist/angular-typeaheadjs.min.js"></script>
 <script src="js/app.js"></script>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
