Test e2e tests Add link to typeahead.js - fork https://github.com/borntorun/typeahead.js/tree/integration-0.11.0 commit abfce247001d4279ac411a30fe1b4a689a51a0eb

--- a/tests/integration/test.html
+++ b/tests/integration/test.html
@@ -2,9 +2,10 @@
 <html>
 <head>
     <title></title>
-    <script src="../../bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="../../bower_components/jquery/jquery.min.js"></script>
     <script src="../../bower_components/angular/angular.min.js"></script>
-    <script src="../../bower_components/typeahead.js/dist/typeahead.bundle.js"></script>
+    <!--<script src="../../bower_components/typeahead.js/dist/typeahead.bundle.min.js"></script>-->
+    <script src="../../bower_components/typeaheadjs-int-0.11.0/dist/typeahead.bundle.min.js"></script>
     <script src="../../src/angular-typeaheadjs.js"></script>
 
     <style>
