--- a/tests/local/test.html
+++ b/tests/local/test.html
@@ -72,7 +72,7 @@
         .controller('FilterCtrl4', [ '$scope', FilterCtrl4 ])
         .controller('FilterCtrl5', [ '$scope', FilterCtrl5 ]);
 
-    function FilterCtrl1($scope) {
+    function FilterCtrl1() {
         var vm = this;
         vm.itemonSelected = '';
         vm.itemonClosed = '';
@@ -100,6 +100,7 @@
     }
     function FilterCtrl2($scope) {
         var vm = this;
+// use as data for ng-repeat example
 //        vm.obj = [
 //            {
 //                op: {
